Update call deprecated in Java 9
DelegatingFileSystemOptionsBuilder.setConfigClass[es](FileSystemOptions,
String, String, Class<?>) now throw the more general
ReflectiveOperationException instead of 2 subclasses